--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "core-js": "^3.3.2",
-    "vue": "^2.6.10"
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
+    "vue": "^2.6.10",
+    "vue-carousel": "^0.18.0",
+    "vue-firestore": "^0.3.22",
+    "vue-router": "^3.1.3",
+    "vue2-editor": "^2.10.2",
+    "vue2-filters": "^0.8.0-beta.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
@@ -20,7 +29,11 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
-    "vue-template-compiler": "^2.6.10"
+    "sass-loader": "^8.0.0",
+    "sweetalert2": "^8.18.6",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.41.2"
   }
 }
