--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.2",
+    "cors": "^2.8.5",
     "jquery": "^3.4.1",
+    "laravel-vue-pagination": "^2.3.1",
     "popper.js": "^1.16.0",
+    "vform": "^1.0.1",
     "vue": "^2.6.10",
     "vue-carousel": "^0.18.0",
     "vue-firestore": "^0.3.22",
     "vue-router": "^3.1.3",
     "vue2-editor": "^2.10.2",
     "vue2-filters": "^0.8.0-beta.1",
-    "vuex": "^3.1.1"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
@@ -34,6 +38,7 @@
     "sass-loader": "^8.0.0",
     "sweetalert2": "^8.18.6",
     "vue-template-compiler": "^2.6.10",
+    "vue-vform": "^1.0.4",
     "webpack": "^4.41.2"
   }
 }
